# adyton

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  install.sh
.github/workflows/: ci.yml  release.yml
bench/jsonbench/: README.md
bench/jsonbench/mini-test/: Cargo.toml
bench/jsonbench/mini-test/src/: main.rs
bench/jsonbench/serde-test/: Cargo.toml
bench/jsonbench/serde-test/src/: main.rs
contrib/homebrew/: adyton.rb
contrib/macports/: Portfile
docs/: RELEASING.md  architecture.md  requirements-notes.md  specification.md  stories.md
docs/research/: empirical-jsonbench.md  validation-log.md
scripts/ci/: forbidden-deps.sh  size-gate.sh  startup-gate.sh
src/: cli.rs  config.rs  error.rs  keychain.rs  main.rs  overlay.rs  paths.rs  prompt.rs  run.rs  secret.rs  selfupdate.rs
src/context/: cache.rs  live.rs  mod.rs  probe.rs  redact.rs  session.rs
src/glue/: adyton.bash  adyton.fish  adyton.zsh  mod.rs
src/wire/: anthropic.rs  event.rs  http.rs  json.rs  mod.rs  openai.rs  sse.rs
tests/: cli.rs
tests/fixtures/: anthropic-docs-derived.sse  openai-vultr-nemotron.sse
