[package]
name = "adyton"
version = "0.1.1"
edition = "2024"
rust-version = "1.96"
description = "Natural language → shell command, streamed to your prompt — never executed for you"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Metalnib/adyton"
homepage = "https://github.com/Metalnib/adyton"
publish = false

[dependencies]
lexopt = "0.3"
miniserde = "0.1"
# rustls(ring)+webpki-roots only; no gzip (flate2), no json (serde) — architecture D2/D3
ureq = { version = "3", default-features = false, features = ["rustls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
